--- a/docs/guides/index.hbs
+++ b/docs/guides/index.hbs
@@ -29,3 +29,7 @@ nav_order: {{navOrder}}
 {{#each oneliner}}
 * [{{{title}}}]({{{location}}})
 {{/each}}{{/if}}
+{{#if includeOJobIO}}## oJobIO
+{{#each ojobio}}
+* [{{{title}}}]({{{location}}})
+{{/each}}{{/if}}
