correct guides template

--- a/docs/guides/index.hbs
+++ b/docs/guides/index.hbs
@@ -12,7 +12,7 @@ nav_order: {{navOrder}}
 ---
 
 {{#is title 'Guide'}}
-# Guide{{/is}}
+# Guides{{/is}}
 {{#if includeBeginner}}## Beginner
 {{#each beginner}}
 * [{{{title}}}]({{{location}}})
